                     CHANGES version 5.35.0

           This file summarizes changes made since 5.0

Version 5.35.0

Fixed: Monit may hang on exit, if a program executed by "check program" was pending while monit tried to quit (regression from Monit 5.34.1).

Fixed: Issue #1115: Service checks may sporadicaly hang if the PID is recycled by the system quickly, e.g. due to PID randomization (regression from Monit 5.34.1).

Fixed: Issue #1121: The "set mailserver" timeout option allowed to only increase the network timeout. Values lower then 30 seconds were ignored.

Fixed: Issue #1122: Monit hangs with high CPU usage if the "set daemon <seconds>" is set to >= 2148 seconds.

Fixed: Issue #1126: Monit with LibreSSL: The secure connection shutdown may hog the CPU for up to connection timeout (5s by default).

Fixed: Monit HTTP interface didn't parse the password file (regression from monit 5.34.4). Thanks to Francisco Javier Felix Belmonte.

Fixed: MacOS: When "check network" is used, but no network interfaces are found, monit terminates with "AssertException: nbytes > 0  raised in Mem_calloc"

Fixed: The loadavg test in the process check context didn't work. Error like this was logged by monit each time the test was executed:
         'myservice' error -- unknown resource ID: [5]

Fixed: MacOS + DragonflyBSD + FreeBSD + NetBSD + OpenBSD: If there are no mounted filesystems and a "check filesystem" is used, monit would terminate with
       "AssertException: count > 0 raised in Mem_calloc"

Fixed: FreeBSD + OpenBSD + NetBSD: Detect presence of backtrace() function during compilation (used in monit -vv mode to print backtrace)

Fixed: MacOS: Monit may stop handling signals (SIGCHLD for children, SIGTERM to exit, SIGHUP for reload, SIGUSR1 for wakeup)

Fixed: If Monit detects syntax errors in the configuration file, log an error message prior to exiting the program.

Fixed: Allow to stop Monit if it is in the middle of secure connection with read/write retries.
